# ultralytics-nix-flake

./: flake.nix  pyproject.toml
.direnv/: flake-profile-1-link
